--- a/hw4-llvm/Makefile
+++ b/hw4-llvm/Makefile
@@ -46,11 +46,15 @@ lib/ccov-rt.o: ccov/ccov-rt.c
 	mkdir -p lib
 	$(CC) $(CFLAGS) -c $< -o $@
 
-ccov_test: test/example1.c ccov 
+ccov_test: test/example.c ccov 
 	$(CC) --ld-path=ld.lld -fno-experimental-new-pass-manager $< lib/ccov-rt.o -g -O0 -Xclang -load -Xclang lib/libccov.so -o ./test/example-ccov
+	mv dbFile.dat test/
 
 ccov_grep: test/grep/grep.c ccov 
 	$(CC) --ld-path=ld.lld -fno-experimental-new-pass-manager $< lib/ccov-rt.o -g -O0 -Xclang -load -Xclang lib/libccov.so -o ./test/grep/grep
+	mv dbFile.dat test/grep/
 
 clean:
-	rm -f lib/*.so lib/*.o test/example log test/example-ccov log-ccov test/grep/grep test/grep/initCoverage.dat test/grep/Coverage.dat test/initCoverage.dat test/Coverage.dat
+	rm -f lib/*.so lib/*.o test/example log
+	rm test/example-ccov test/dbFile.dat test/Coverage.dat
+	rm test/grep/grep test/grep/dbFile.dat test/grep/Coverage.dat
